# real-time-trading-decisions

./: .gitignore  .replit  README.md
backend/: app.py
backend/routers/: execution_learning.py
backend/services/execution_learning/: __init__.py  clustering.py  export_rtts_weights.py  failure_classifier.py  features.py  pipeline.py  policy.py  postmortem.py  regime.py  return_model.py  schemas.py  survival.py  truth.py
control-plane/: Dockerfile  README.md  go.mod
control-plane/cmd/control-plane/: main.go
control-plane/internal/api/: hub.go  server.go
control-plane/internal/config/: config.go
control-plane/internal/domain/: types.go
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
rtts/: Cargo.toml  README.md
rtts/src/: adaptive_engine.rs  adverse_selection.rs  competition_model.rs  config.rs  context_engine.rs  decision.rs  entry_quality.rs  entry_scoring.rs  ev_calculator.rs  event_engine.rs  execution.rs  execution_controller.rs  execution_external.rs  execution_mode.rs  execution_smart.rs  execution_truth.rs  features.rs  fill_probability.rs  flow_intelligence.rs  ingestion.rs  learning.rs  lib.rs  main.rs  markout.rs  meta_engine.rs  metrics.rs  micro_exit.rs  micro_timing.rs  microstructure.rs  model.rs  model_weights.rs  orderbook.rs  pipeline.rs  position.rs  queue_position.rs  reversal_classifier.rs  reversal_engine.rs  risk.rs  scenario_simulator.rs  symbol_profile.rs  (+3 more)
rtts/src/accounting/: edge_validation.rs  interfaces.rs  latency.rs  ledger.rs  mod.rs  quality.rs  validation.rs
rtts/src/execution/: queue_engine.rs
(+33 files in other folders)
